--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import"./utils";
 
-body {
-  background: $c-gray;
-}
+@import"./blocks/header";
+@import"./blocks/button";
+@import"./blocks/subscribe";
+@import"./blocks/title";
+@import"./blocks/events";
+@import"./blocks/slider";
+@import"./blocks/logo";
+@import"./blocks/gallery";
+@import"./blocks/footer";
+@import"./blocks/contact";
+@import"./blocks/social";
+@import"./blocks/schedule";
+@import"./blocks/menu";
+@import"./blocks/icon-menu";
+@import"./blocks/page";
+@import"./blocks/container";
